# nltfile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
doc/: optimization.md
src/nltfile/: __init__.py  funos.py
src/nltfile/compress/: __init__.py  allfile.py  tarfile.py  utils.py
src/nltfile/file/: concurrent.py  core.py
src/nltfile/utils/: __init__.py  hash.py  size.py  tqdm_bar.py
