[project]
name = "nltfile"
description = "nltfile"
readme = "README.md"
version = "1.0.33"
requires-python = ">=3.7"
dependencies = [ "funlog-tau>=1.0.0", "tqdm>=4.66.5",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/nltfile"
Releases = "https://github.com/farfarfun/nltfile/releases"

[tool.setuptools]
license-files = []
